# quark-reborn

./: .cursorignore  .env  .env.example  .gitignore  Architecture.md  Cargo.toml  DEBUG.md  DEBUG_LLDB.md  LICENSE  README.md  aux | grep quark_bot  debug_lldb.sh  debug_test.sh  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.yml  env.example  instruct.md  package.json  plan.md  prompt-guidence.md
contracts/quark/: Move.toml
contracts/quark/sources/: admin.move  group.move  user.move
contracts/quark/tests/: admin_test.move  group_test.move  user_test.move
contracts/quark_test/: Move.toml
contracts/quark_test/tests/: admin_test.move  group_test.move  user_test.move
contracts/src/: aptos.rs  lib.rs
quark-webhook/: .gitignore  Dockerfile  README.md  env.example  next.config.ts  package.json  pnpm-lock.yaml
quark-webhook/src/: instrumentation-client.ts  mockEnv.ts
quark-webhook/src/app/: layout.tsx  page.tsx
quark-webhook/src/app/dao/: page.tsx
quark-webhook/src/app/fund/: page.tsx
quark-webhook/src/app/login/: page.tsx
quark-webhook/src/app/twitter-login/: page.tsx
quark-webhook/src/app/withdraw/: page.tsx
quark-webhook/src/app/x_auth/: page.tsx
quark-webhook/src/aptos/: QuarkAdminAbi.ts  QuarkGroupAbi.ts  QuarkUserAbi.ts  client.ts  index.ts
quark-webhook/src/components/: Page.tsx
quark-webhook/src/components/DaoWallet/: DaoWallet.tsx
quark-webhook/src/config/: env.ts
quark-webhook/src/context/: AbiProvider.tsx  AgentProvider.tsx  AppManagment.tsx  ChainProvider.tsx  ServicesProvider.tsx  WalletProvider.tsx
quark-webhook/src/core/: init.ts
quark-webhook/src/helpers/: enums.ts  index.ts  interfaces.ts  onchain-actions.ts  types.ts  utils.ts
quark-webhook/src/hooks/: useActionDelay.ts  useMessage.ts
quark-webhook/src/services/: index.ts  quark-server.ts  tools.ts
quark_backend/: Cargo.toml
quark_backend/src/: ai.rs  db.rs  lib.rs
quark_backend/src/ai/: gcs.rs  mod.rs  tools.rs  vector_store.rs
quark_bot/: Cargo.toml  Dockerfile  Dockerfile.debug  Dockerfile.dev  Dockerfile.lldb
quark_bot/config/: authorized_announcers.json  authorized_announcers.ron
quark_bot/src/: callbacks.rs  command_image_collector.rs  commands.rs  dependencies.rs  file_handling.rs  main.rs  media_aggregator.rs  utils.rs
quark_bot/src/ai/: README.md  actions.rs  dto.rs  group_vector_store.rs  handler.rs  mod.rs  prompt.rs  prompt_template.rs  tools.rs  vector_store.rs
quark_bot/src/ai/moderation/: dto.rs  handler.rs  mod.rs  moderation_service.rs  moderation_service_template.rs  overrides.rs  overrides_template.rs
quark_bot/src/ai/schedule_guard/: dto.rs  mod.rs  schedule_guard_service.rs  schedule_guard_service_template.rs  service.rs
quark_bot/src/ai/sentinel/: handler.rs  mod.rs  sentinel.rs
quark_bot/src/ai/summarizer/: dto.rs  handler.rs  helpers.rs  mod.rs
quark_bot/src/ai/ta/: indicators.rs  mod.rs  types.rs
quark_bot/src/announcement/: announcement.rs  dto.rs  handler.rs  mod.rs
quark_bot/src/aptos/: handler.rs
quark_bot/src/assets/: command_image_collector.rs  group_file_handler.rs  group_file_upload_state.rs  handler.rs  media_aggregator.rs  mod.rs
quark_bot/src/bot/: announcement.rs  answers.rs  handler.rs  handler_tree.rs  hooks.rs  mod.rs
quark_bot/src/command_settings/: command_settings_manager.rs  dto.rs  handler.rs  mod.rs
quark_bot/src/credentials/: dto.rs  handler.rs  helpers.rs
quark_bot/src/dao/: dao.rs  dto.rs  handler.rs  mod.rs
quark_bot/src/filters/: dto.rs  filters.rs  handler.rs  helpers.rs  mod.rs  wizard.rs
quark_bot/src/group/: document_library.rs  dto.rs  handler.rs  mod.rs
quark_bot/src/job/: handler.rs  job_scheduler.rs  mod.rs
quark_bot/src/message_history/: handler.rs  mod.rs
quark_bot/src/middleware/: auth.rs
quark_bot/src/panora/: dto.rs  handler.rs
quark_bot/src/payment/: dto.rs  handler.rs  mod.rs  payment.rs
quark_bot/src/pending_transactions/: dto.rs  handler.rs
quark_bot/src/scheduled_payments/: callbacks.rs  dto.rs  handler.rs  helpers.rs  mod.rs  runner.rs  storage.rs  wizard.rs
quark_bot/src/scheduled_prompts/: callbacks.rs  dto.rs  handler.rs  mod.rs  runner.rs  storage.rs  wizard.rs
quark_bot/src/services/: handler.rs
quark_bot/src/sponsor/: dto.rs  handler.rs  mod.rs  sponsor.rs
quark_bot/src/summarization_settings/: dto.rs  handler.rs  helpers.rs  mod.rs  summarization_settings.rs
quark_bot/src/user_conversation/: dto.rs  handler.rs
quark_bot/src/user_model_preferences/: callbacks.rs  dto.rs  handler.rs  mod.rs
quark_bot/src/welcome/: dto.rs  handler.rs  helpers.rs  mod.rs  welcome_service.rs
quark_bot/src/yield_ai/: dto.rs  handler.rs  mod.rs  yield_ai.rs
quark_consumer/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
quark_consumer/assets/: prices.ron
quark_consumer/src/: error.rs  main.rs
quark_consumer/src/admin/: handler.rs
quark_consumer/src/calculator/: dto.rs  handler.rs
quark_consumer/src/purchase/: dto.rs  handler.rs
quark_core/: Cargo.toml
quark_core/src/: lib.rs
quark_core/src/ai/: dto.rs  gcs.rs  handler.rs  mod.rs  prompt.rs  vector_store.rs
quark_core/src/helpers/: bot_commands.rs  dto.rs  encryption.rs  gpg.rs  jwt.rs  mod.rs  utils.rs
quark_core/src/twitter/: auth.rs  dto.rs  mod.rs  storage.rs
quark_core/src/user_conversation/: dto.rs  handler.rs
quark_server/: Cargo.toml  Dockerfile  Dockerfile.dev
quark_server/src/: error.rs  gpg.rs  main.rs  router.rs  state.rs  util.rs
quark_server/src/admin/: handler.rs
quark_server/src/create_group/: handler.rs
quark_server/src/dao/: handler.rs
quark_server/src/docs/: dto.rs
quark_server/src/info/: handler.rs
quark_server/src/middlewares/: handler.rs
quark_server/src/migration/: handler.rs
quark_server/src/pay_members/: handler.rs
quark_server/src/pay_users/: handler.rs
quark_server/src/purchase/: handler.rs
quark_server/src/twitter/: handler.rs
scripts/: Cargo.toml  download_ai_files.sh  get_abi.sh  upload_ai_files.sh
scripts/src/: common.rs  download.rs  lib.rs  main.rs  upload.rs
(+28 files in other folders)
