[workspace]
resolver = "2"
members = [
    "quark_core",
    "quark_bot",
    "quark_server", "quark_consumer"]

[workspace.dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
tracing-subscriber = "0.3"
dotenvy = "0.15"
sled = "0.34.7"
quark_core = { path = "./quark_core" }
regex = "1.10.5"
dashmap = "6.1.0"
reqwest = { version = "0.12.22", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
axum = {version = "0.8.4", features = ["macros"] }
tower = "0.5.2"
tower-http = {version="0.6.4", features = ["trace"]}
jsonwebtoken = "9.3.1"
utoipa = "5.3.1"
utoipa-redoc = {version = "6.0.0", features = ["axum"]}
aptos-rust-sdk = {git = "https://github.com/Singularity-Shift/aptos-rust-sdk.git", branch="feat/view-functions", package="aptos-rust-sdk"}
aptos-rust-sdk-types = {git = "https://github.com/Singularity-Shift/aptos-rust-sdk.git", branch = "feat/view-functions", package="aptos-rust-sdk-types"}
aptos-crypto = {git = "https://github.com/Singularity-Shift/aptos-rust-sdk.git", branch="feat/view-functions",  package="aptos-crypto"}
aptos-crypto-derive = {git = "https://github.com/Singularity-Shift/aptos-rust-sdk.git", branch="feat/view-functions", package="aptos-crypto-derive"}
redis = {version = "0.32.4", features = ["tokio-comp"]}
open-ai-rust-responses-by-sshift = "0.2.8"
ron= {version = "0.10.1"}
bincode = "2.0.1"
hex = "0.4.3"
bcs = "0.1.6"