[workspace]
resolver = "2"
members = [
    "quark_core",
    "quark_bot",
    "quark_server", "quark_consumer"]
exclude = ["scripts"]

[workspace.dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
tracing-subscriber = "0.3"
dotenvy = "0.15"
sled = "0.34.7"
quark_core = { path = "./quark_core" }
regex = "1.10.5"
dashmap = "6.1.0"
reqwest = { version = "0.12.22", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
axum = {version = "0.8.4", features = ["macros"] }
tower = "0.5.2"
tower-http = {version="0.6.4", features = ["trace"]}
jsonwebtoken = "9.3.1"
utoipa = "5.3.1"
utoipa-redoc = {version = "6.0.0", features = ["axum"]}
aptos-rust-sdk = {git = "https://github.com/aptos-labs/aptos-rust-sdk.git", package="aptos-rust-sdk"}
aptos-rust-sdk-types = {git = "https://github.com/aptos-labs/aptos-rust-sdk.git", package="aptos-rust-sdk-types"}
aptos-crypto = {git = "https://github.com/aptos-labs/aptos-rust-sdk.git",  package="aptos-crypto"}
aptos-crypto-derive = {git = "https://github.com/aptos-labs/aptos-rust-sdk.git", package="aptos-crypto-derive"}
redis = {version = "0.32.4", features = ["tokio-comp"]}
open-ai-rust-responses-by-sshift = "0.3.1"
ron= {version = "0.10.1"}
bincode = "2.0.1"
hex = "0.4.3"
bcs = "0.1.6"
chrono = "0.4.41"
uuid = {version = "1.17.0", features = ["v4"]}
futures = "0.3.30"
rand = "0.9.2"