[package]
name = "quark_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
teloxide = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
tracing-subscriber = "0.3"
dotenvy = { workspace = true }
sled = { workspace = true }
quark_core = { workspace = true }
regex = "1.10.5"
dashmap = "5.5.3"
tracing = "0.1.41"
