[package]
name = "quark_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
teloxide = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = "0.14"
log = { workspace = true }
tracing-subscriber = "0.3"
dotenvy = { workspace = true }
sled = { workspace = true }
quark_core = { workspace = true }
reqwest = { workspace = true }
aptos-rust-sdk = { workspace = true }
aptos-rust-sdk-types = { workspace = true }
aptos-crypto = { workspace = true }
aptos-crypto-derive = { workspace = true }
regex = "1.10.5"
dashmap = { workspace = true }
tracing = "0.1.41"
open-ai-rust-responses-by-sshift = { workspace = true }
base64 = "0.22.1"
cloud-storage = "0.11.1"
uuid = { version = "1.9.1", features = ["v4"] }
urlencoding = "2.1.3"
bincode = { workspace = true }
bcs = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }