[package]
name = "quark_consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
redis= { workspace = true }
ron= { workspace = true }
tokio = { workspace = true }
aptos-rust-sdk = { workspace = true }
aptos-rust-sdk-types = { workspace = true }
aptos-crypto = { workspace = true }
aptos-crypto-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quark_core = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }