[package]
name = "quark_core"
version = "0.1.0"
edition = "2021"

[dependencies]
open-ai-rust-responses-by-sshift = "0.2.2"
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
teloxide = { workspace = true }
sled = { workspace = true }
reqwest = { workspace = true }
base64 = "0.22.1"
urlencoding = "2.1.3"
bincode = "1.3.3"
log = { workspace = true }
env_logger = "0.11.3"
dotenvy = { workspace = true }
thiserror = "1.0.62"
cloud-storage = "0.11.1"
uuid = { version = "1.9.1", features = ["v4"] }
jsonwebtoken = { workspace = true }
chrono = "0.4.41"
[dev-dependencies]
mockito = "1.4.0"
serial_test = "3.0.0"
futures = "0.3.30"
wiremock = "0.6.1"
async-trait = "0.1.81"
