[package]
name = "quark_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
teloxide = { workspace = true }
sled = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
env_logger = "0.11.3"
dotenvy = { workspace = true }
thiserror = "1.0.62"
jsonwebtoken = { workspace = true }
chrono = "0.4.41"
utoipa = { workspace = true }

[dev-dependencies]
mockito = "1.4.0"
serial_test = "3.0.0"
futures = "0.3.30"
wiremock = "0.6.1"
async-trait = "0.1.81"
