[package]
name = "quark_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
teloxide = { workspace = true }
sled = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
env_logger = "0.11.3"
dotenvy = { workspace = true }
thiserror = "1.0.62"
jsonwebtoken = { workspace = true }
chrono = "0.4.41"
utoipa = { workspace = true }
regex.workspace = true
base64 = "0.22.1"
rand = "0.8.5"
sha2 = "0.10.8"
urlencoding = "2.1.3"
ring = "0.17.7"

[dev-dependencies]
mockito = "1.4.0"
serial_test = "3.0.0"
futures = "0.3.30"
wiremock = "0.6.1"
async-trait = "0.1.81"
tempfile = "3.8.1"
