[package]
name = "quark_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true } 
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
utoipa-redoc = { workspace = true }
dotenvy = { workspace = true }